--- a/k8s/gymscheduler-service.yaml
+++ b/k8s/gymscheduler-service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gym-backend
+  namespace: gym
 spec:
-  type: NodePort
   selector:
     app: gym-backend
   ports:
