--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 spring.application.name=gym-scheduler
-logging.level.org.springframework.security=DEBUG
-
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:default}
+server.port = ${GYMSCHEDULER_BE_PORT:8080}
+logging.level.org.springframework.security= ${LOG_LEVEL_SECURITY:INFO}
 # MongoDB configuration
-spring.data.mongodb.uri=${MONGODB_URI}
+spring.mongodb.uri=${MONGODB_URI}
 # Atmosfera CMS authentication cookie
 auth.cookie.token=${AUTH_COOKIE_TOKEN}
 # Atmosfera Member ID
 app.default.memberId=${DEFAULT_MEMBER_ID}
 app.days.range=${DAYS_RANGE}
 # API security credentials
-app.api.username=${SECURITY_USER_NAME}
-app.api.password=${SECURITY_USER_PASSWORD}
-
+app.api.key=${SECURITY_API_KEY:#{null}}
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+management.endpoints.web.base-path=/actuator
+management.server.port=${MANAGEMENT_PORT:5000}
