Improved Kubernetes configuration (note: missing gymscheduler-secret in repo - must be applied manually). Temporarily removed Spring Security. Boxed fields of GymResponseBody - primitives caused serialization errors (probably when missing, needs more investigation, probably simple class trimming fixes the issue).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.application.name=gym-scheduler
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:default}
-server.port = ${GYMSCHEDULER_BE_PORT:8080}
-logging.level.org.springframework.security= ${LOG_LEVEL_SECURITY:INFO}
+spring.application.name=gym-scheduler-backend
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+server.port=${GYMSCHEDULER_BE_PORT:8080}
+logging.level.org.springframework.security=${LOG_LEVEL_SECURITY:DEBUG}
+logging.level.com.wielkopolan.gymscheduler=${LOG_LEVEL:INFO}
 # MongoDB configuration
 spring.mongodb.uri=${MONGODB_URI}
 # Atmosfera CMS authentication cookie
@@ -9,10 +10,20 @@ auth.cookie.token=${AUTH_COOKIE_TOKEN}
 # Atmosfera Member ID
 app.default.memberId=${DEFAULT_MEMBER_ID}
 app.days.range=${DAYS_RANGE}
+
 # API security credentials
 app.api.key=${SECURITY_API_KEY:#{null}}
+
+# CORS configuration
+app.cors.allowed-origins=${ALLOWED_ORIGINS:*}
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,HEAD
+#spring.web.cors.exposed-headers=X-Api-Key
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=${CORS_ALLOW_CREDENTIALS:false}
+
 # Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 management.endpoints.web.base-path=/actuator
+management.health.mongodb.enabled=false
 management.server.port=${MANAGEMENT_PORT:5000}
