Traefik ingress class (built in k3s)

--- a/k8s/overlays/raspberry/ingress-patch.yaml
+++ b/k8s/overlays/raspberry/ingress-patch.yaml
@@ -4,6 +4,7 @@ metadata:
   name: gym-backend-ingress
   namespace: gym
 spec:
+  ingressClassName: traefik
   rules:
     - host: gym.local
       http:
