--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=gym-scheduler-backend
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 server.port=${GYMSCHEDULER_BE_PORT:8080}
 logging.level.org.springframework.security=${LOG_LEVEL_SECURITY:DEBUG}
-logging.level.com.wielkopolan.gymscheduler=${LOG_LEVEL:INFO}
+logging.level.com.wielkopolan.gymscheduler=${LOG_LEVEL:DEBUG}
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=${LOG_LEVEL_MONGO:DEBUG}
 # MongoDB configuration
 spring.mongodb.uri=${MONGODB_URI}
 # Atmosfera CMS authentication cookie
